# systemtap

./: ,changelog  .doxyfile  .gitignore  .mailmap  AGENTS.md  AUTHORS  AUTHORS.sh  BROWSE  ChangeLog  GPATH  GRTAGS  GTAGS  HACKING  ID  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  analysis.cxx  bpf-base.cxx  bpf-internal.h  bpf-opt.cxx  bpf-shared-globals.h  bpf-translate.cxx  buildrun.cxx  cache.cxx  client-http.cxx  client-http.h  client-nss.cxx  cmdline.cxx  cmdline.h  config.in  configure  configure.ac  coveragedb.cxx  csclient.cxx  cscommon.cxx  dtrace.in  dwarf_wrappers.cxx  (+62 more)
interactive-notebook/: ISystemtap.ipynb  Makefile.am  Makefile.in  README.md  RedHatBlog.ipynb  install.sh  jupyter_stap_lsp.json  requirements.txt  setup.py  stap-jupyter-container.in  stap-jupyter-install.in
interactive-notebook/codemirror/: package.json
interactive-notebook/codemirror/jupyterlab-stap-highlighting/: __init__.py
interactive-notebook/codemirror/lib/: plugin.js  stap.js
interactive-notebook/container/: Dockerfile  isystemtap_launcher.sh  runtime_container_config.sh
interactive-notebook/isystemtap/: __init__.py  __main__.py  kernel.json  stap_jobjects.py  stap_kernel.py
interactive-notebook/stap_kernel/: poll.py  stap_jobjects.py  stap_kernel.py
interactive-notebook/tests/: stap_test_kernel.py
po/: LINGUAS  (+9 more)
python/: Makefile.am  Makefile.in  setup.cfg  setup.py  stap-resolve-module-function.py
python/HelperSDT/: README.txt  _HelperSDT.c  __init__.py
testsuite/: ChangeLog  Makefile.am  Makefile.in  README  configure  configure.ac
testsuite/buildok/: defined-entry.stp  guru.stp  inet_sock-embedded.stp  memory-detailed.stp  nested_vars.stp  nfs-detailed.stp  nfsd-detailed.stp  probe_combining.stp  seven.stp  seventeen.stp  tcp-detailed.stp  three.stp  twentyseven.stp  two.stp  xtime.stp
testsuite/lib/: bgerror.exp  http_server.exp  stap_compile.exp  stap_run.exp  stap_run2.exp  stap_run_error.exp  stapi.exp  systemtap.exp  test_simple.exp
testsuite/parseok/: macros09.stp  unparser.stp
testsuite/semko/: binexpr_infer_type5.stp  binexpr_infer_type6.stp  defined_entry01.stp  defined_entry02.stp  defined_entry03.stp
testsuite/semok/: autocast11.stp  badvar_undefined.stp  binexpr_infer_type.stp  defined_list_vars.stp  definedautocast.stp  kretprobe-data.stp  one.stp  pr30570.stp  pr33428.stp  seventeen.stp  stmtbad.stp  syscall_return.stp  target_addr.stp  thirteen.stp  thirtyeight.stp  thirtyfive.stp  thirtyfour.stp  thirtysix.stp  thirtythree.stp  twentyseven.stp
testsuite/systemtap/: environment_sanity.exp
testsuite/systemtap.apps/: xulrunner.exp
testsuite/systemtap.base/: add.stp  alias_tapset.exp  array_slicing.exp  at_var.c  at_var_lvalue.c  at_var_timer_profile.c  at_var_void_stmt.c  at_var_void_stmt.exp  auto_path.exp  bitfield2.c  bitfield2.exp  bitfield2.stp  buildid.exp  bz5274.exp  cache.exp  caller.exp  cast-scope.cxx  cast-scope.exp  cast.stp  cmd_parse.exp  const_value.c  const_value_func.c  debug.exp  debuginfod_probe.exp  dtrace.exp  dw_entry_value.exp  embeddedc_suffix.exp  embeddedc_suffix_1.stp  error_context.exp  error_context.stp  error_dedup.exp  error_dedup.stp  error_fn.exp  exectrace.exp  exectrace.stp  flightrec1.exp  flightrec2.exp  flightrec2.stp  flightrec4.exp  flightrec5.exp  (+127 more)
testsuite/systemtap.bpf/: bpf-variance.exp  bpf.exp  lsm.exp  nonbpf.exp
testsuite/systemtap.bpf/bpf_tests/: bigmap1.stp  stat1.stp  stat2.stp  stat3.stp  stat_array_in.stp
testsuite/systemtap.context/: args.tcl  backtrace.tcl  context.exp  makefile1  num_args.tcl  pid.tcl  systemtap_test_module1.c  uprobe_backtrace.exp
testsuite/systemtap.examples/: examples-index-gen.pl  index.html  index.txt  keyword-index.html  keyword-index.txt  metadatabase.db
testsuite/systemtap.examples/general/: badname.stp
testsuite/systemtap.examples/io/: iostat-scsi.stp  traceio3.stp
testsuite/systemtap.examples/lwtools/: fslatency-nd.stp  fsslower-nd.stp
testsuite/systemtap.examples/memory/: cachestat.stp  hugepage_clear_delays.stp  hugepage_cow_delays.stp  mmfilepage.stp  mmreclaim.stp  mmwriteback.stp  stack_sizes.stp  swapmonitor.stp
testsuite/systemtap.examples/network/: dropwatch.stp  tcp_trace.stp
testsuite/systemtap.examples/process/: futexes2.stp  mutex-contention.stp  pfiles.stp  plimit.stp  proctop.txt
testsuite/systemtap.exelib/: exelib.exp  pthreadprobes.exp  uprobes_exe.c  uprobes_lib.c
testsuite/systemtap.http_server/: server_trust.exp
testsuite/systemtap.interactive/: char_and_line.exp  input.char.exp  input.line.exp
testsuite/systemtap.language_server/: jsonrpc.py  langserver.exp  stap_language_server_tester.py
testsuite/systemtap.maps/: PR31740.exp  PR31740_1.stp  PR31740_2.stp  map_hash.exp  map_hash_SI.stp  map_hash_SSI.stp  map_hash_stat_SI.stp  map_hash_stat_SSI.stp  map_wrap.exp  pmap_agg_overflow.stp
testsuite/systemtap.pass1-4/: buildko.exp  buildok-dyninst.exp  buildok-interactive.exp  buildok.exp  debugtypes.exp  parse-semko.exp  parse-semok.exp  parseko.exp  parseok.exp  runok.exp  semko.exp  semok.exp  transko.exp  transok.exp
testsuite/systemtap.printf/: basic1.exp  basic2.exp  basic3.exp  basic4.exp  basic5.exp  basic6.exp  memory1_module.c  stap_merge.tcl  string1.exp
testsuite/systemtap.python/: python-var.py  python-var.stp  python3.exp
testsuite/systemtap.samples/: tcptest.tcl
testsuite/systemtap.server/: httpd.exp  server.exp
testsuite/systemtap.stress/: conversions.exp
testsuite/systemtap.syscall/: acct.c  alarm.c  arg_write.exp  arg_write.stp  chmod.c  chroot.c  clock.c  dir.c  file_getattr.c  file_setattr.c  futimes.c  getrusage.c  getsockname.c  itimer.c  listen.c  lseek.c  lsm_get_self_attr.c  lsm_set_self_attr.c  memfd_create.c  memfd_secret.c  mknod.c  modify_ldt.c  mount.c  mq.c  msg_queue.c  nd_sys.stp  nd_syscall.exp  openclose.c  pivot_root.c  pread.c  preadv.c  pwrite.c  pwritev.c  quotactl.c  readv.c  readwrite.c  recvfrom.c  recvmmsg.c  recvmsg.c  rt_signal.c  (+21 more)
testsuite/systemtap.unprivileged/: pr16806.exp  unprivileged_embedded_C.exp  unprivileged_myproc.exp  unprivileged_probes.exp
(+1534 files in other folders)
