[metadata]
name = HelperSDT
version = 0.1.0
description = Helper SDT python module
long_description = file: HelperSDT/README.txt
url = http://sourceware.org/systemtap
author = Systemtap Development Team
author_email = systemtap@sourceware.org
license = GPLv2+

[options]
packages = HelperSDT
python_requires = >=3.6
